# LPJ-GUESS-NTD

./: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.MD  README.md  readme.txt
benchmarks/: benchmarks  europe.ins  global.ins  paths.ins  printerfriendly  readme.txt  report2html  runpostprocessing
benchmarks/common/: legend_cmass_europe.txt  legend_cmass_global.txt  legend_cton.txt  legend_delta_fire_emis.txt  legend_fire_emis.txt  legend_frac_LAI.txt  legend_lai_europe.txt  legend_lai_global.txt  legend_npp_global.txt
benchmarks/crop_global/: postprocess.sh  readme.txt  submit_vars.sh
benchmarks/crop_mixed_sites/: submit_vars.sh
benchmarks/diurnal_pristine_sites/: extra_source.txt  postprocess.sh  submit_vars.sh
benchmarks/emdi_europe/: extra_source.txt  postprocess.sh
benchmarks/emdi_global/: postprocess.sh  submit_vars.sh
benchmarks/euroflux/: postprocess.sh  submit_vars.sh
benchmarks/euroflux_globalpfts/: extra_source.txt  postprocess.sh
benchmarks/europe/: postprocess.sh  submit_vars.sh
benchmarks/fluxnet/: extra_source.txt  postprocess.sh  readme.txt  submit_vars.sh
benchmarks/global/: postprocess.sh  submit_vars.sh
benchmarks/panarctic/: obs_ald_2000to2015.txt  postprocess.sh  submit_vars.sh
benchmarks/postprocess/: biomes  common1961to1990.sh  compute_above_ground_biomass.awk  emdi_npp_compare.sh  euroflux_compare.sh  gmapall  gmapall.awk  pan_regional_biomass.sh  postprocess_above_ground_biomass.sh  rules.awk  scatter_plot.sh
benchmarks/pristine_sites/: postprocess.sh  submit_vars.sh
benchmarks/secondary_stands/: postprocess.sh
benchmarks/soil_temperature/: postprocess.sh  submit_vars.sh
benchmarks/wetland_global/: postprocess.sh  submit_vars.sh
benchmarks/wetland_sites/: postprocess.sh  submit_vars.sh
cmake/: FindNetCDF.cmake  add_guess_sources.cmake  add_test_sources.cmake
command_line_version/: main.cpp
cru/: CMakeLists.txt
cru/guessio/: GlobalNitrogenDeposition.h  GlobalNitrogenDepositionRCP26.h  GlobalNitrogenDepositionRCP45.h  GlobalNitrogenDepositionRCP60.h  GlobalNitrogenDepositionRCP85.h  cru_ts30.cpp  cru_ts30.h  cruinput.cpp  cruinput.h  cruncep_1901_2015.h  cruncep_1901_2015misc.h  lamarquendep.cpp  lamarquendep.h  simfire_input.h
data/env/: AmazonFACE_daily_mean_mNHxdrydep.nc  AmazonFACE_daily_mean_mNHxwetdep.nc  AmazonFACE_daily_mean_mNOydrydep.nc  AmazonFACE_daily_mean_mNOywetdep.nc  AmazonFACE_daily_mean_mPOxdrydep.nc  AmazonFACE_daily_mean_mPOxwetdep.nc  Amazon_FACE_daily_mean_radiation.nc  Amazon_FACE_daily_mean_temperature.nc  Amazon_FACE_daily_total_precipitation.nc  BOM_daily_mean_radiation.nc  BOM_daily_mean_temperature.nc  BOM_daily_total_precipitation.nc  BOM_monthly_mean_radiation_50yb.nc  BOM_monthly_mean_temperature_50yb.nc  BOM_monthly_total_precipitation_50yb.nc  CAJ_daily_mean_radiation.nc  CAJ_daily_mean_temperature.nc  CAJ_daily_total_precipitation.nc  CAJ_monthly_mean_radiation_50y.nc  CAJ_monthly_mean_temperature_50y.nc  CAJ_monthly_total_precipitation_50y.nc  ECSF_daily_mean_mNHxdrydep.nc  ECSF_daily_mean_mNHxdrydep_hist.nc  ECSF_daily_mean_mNHxwetdep.nc  ECSF_daily_mean_mNHxwetdep_hist.nc  ECSF_daily_mean_mNOydrydep.nc  ECSF_daily_mean_mNOydrydep_hist.nc  ECSF_daily_mean_mNOywetdep.nc  ECSF_daily_mean_mNOywetdep_hist.nc  ECSF_daily_mean_mPOxdrydep.nc  ECSF_daily_mean_mPOxwetdep.nc  ESF_daily_mean_radiation.nc  ESF_daily_mean_temperature.nc  ESF_daily_total_precipitation.nc  ESF_monthly_mean_radiation_50y.nc  ESF_monthly_mean_temperature_50y.nc  ESF_monthly_total_precipitation_50y.nc  GlobalPO4depLandMonthly.csv  GlobalTSPPO4depLandMonthly.csv  chelsa_podocarpus_prec.nc  (+9 more)
data/gridlist/: gridlistPodocarpusCHELSA.txt  gridlist_AmazonFACE_cf_local.txt  gridlist_Ecuador_ECSF.txt  gridlist_Ecuador_ECSF_cf.txt  gridlist_Ecuador_ECSF_cf_local.txt  gridlist_Ecuador_ECSF_lowland.txt  gridlist_geb.txt  gridlist_global.txt  gridlist_savannah.txt
data/ins/: arctic.ins  crop.ins  crop_c.ins  crop_n.ins  europe.ins  europe_cf.ins  europe_cru.ins  europe_demo.ins  global.ins  global_cf.ins  global_cru.ins  global_demo.ins  global_p-traits-srlmyco.ins  global_p-traits-srlmyco_daily.ins  global_p.ins  global_p_cf.ins  global_p_cru.ins  global_soiln.ins  landcover.ins  p-traits-srlmyco_cru.ins  wetlandpfts.ins
doxygen/: classespage.h  doxygen.conf  inputpage.h  mainpage.h  outputpage.h
framework/: archive.cpp  archive.h  commandlinearguments.cpp  commandlinearguments.h  config.h  externalinput.cpp  externalinput.h  framework.cpp  framework.h  guess.cpp  guess.h  guesscontainer.h  guessmath.h  guessserializer.cpp  guessserializer.h  guessstring.cpp  guessstring.h  indata.cpp  indata.h  inputmodule.cpp  inputmodule.h  outputchannel.cpp  outputchannel.h  outputmodule.cpp  outputmodule.h  parallel.cpp  parallel.h  parameters.cpp  parameters.h  partitionedmapserializer.cpp  partitionedmapserializer.h  shell.cpp  shell.h
libraries/guessnc/: cfvariable.cpp  cfvariable.h
libraries/gutil/: gutil.cpp  gutil.h
libraries/plib/: plib.cpp  plib.h  recursivefilereader.cpp  recursivefilereader.h
modules/: CMakeLists.txt  blaze.cpp  blaze.h  bvoc.cpp  bvoc.h  canexch.cpp  canexch.h  cfinput.cpp  cfinput.h  commonoutput.cpp  commonoutput.h  cropallocation.cpp  cropallocation.h  cropphenology.cpp  cropphenology.h  cropsowing.cpp  cropsowing.h  demoinput.cpp  demoinput.h  driver.cpp  driver.h  globalco2file.cpp  globalco2file.h  growth.cpp  growth.h  landcover.cpp  landcover.h  management.cpp  management.h  miscoutput.cpp  miscoutput.h  ncompete.cpp  ncompete.h  ntransform.cpp  ntransform.h  q10.h  simfire.cpp  simfire.h  soil.cpp  soil.h  (+14 more)
parallel_version/: aurora.tmpl  gimle.tmpl  multicore.tmpl
reference/: guess_guidelines.doc  guessdoc.doc  releasenotes.txt  scientific_description.docx
tests/: CMakeLists.txt  cftime_test.cpp  climate_test.cpp  date_test.cpp  guesscontainer_test.cpp  main.cpp  math_test.cpp  ncompete_test.cpp  string_test.cpp
windows_version/: CMakeLists.txt  dllmain.cpp  dllmain.h  getcliminput.cpp  getcliminput.h  readme_guesswin.txt
(+55 files in other folders)
